--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,46 +1,36 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Render runner</title>
-        <link rel="stylesheet" href="style.css">
+        <title>Interactive haskell powered board</title>
+        <link rel="stylesheet" href="css/skeleton.css">
+        <link rel="stylesheet" href="css/chess.css">
+        <link rel="stylesheet" href="css/customcss.css">
     </head>
     <body>
-        <div id="board" style="width:400px"> </div>
+        <div class="container">
+            <div class="row">
+                <div class="twelve columns">
+                    <h1>Haskell powered chess board</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div id="board" class="six columns"></div>
+                <div id="stats" class="six columns">
+                    <div id="server-status" style="display:none">
+                        <h2>Server status</h2>
+                        <p></p>
+                    </div>
+                    <div>
+                        <h2>Moves</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
         <script
 			      src="https://code.jquery.com/jquery-1.12.4.min.js"
 			      integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
 			      crossorigin="anonymous"></script>
-        <script src="https://chessboardjs.com/js/chessboard.js"></script>
-        <script>
-         var removeHighlighting = function() {
-             $('#board .square-55d63').css('background', '');
-         };
-
-         var highlight = function(square) {
-             var squareEl = $('#board .square-' + square);
-
-             var background = '#a9a9a9';
-             if (squareEl.hasClass('black-3c85d') === true) {
-                 background = '#696969';
-             }
-
-             squareEl.css('background', background);
-         };
-
-         var blueSquare = function(square) {
-             var squareEl = $('#board .square-' + square);
-
-             squareEl.css('border', 'red 1px solid');
-         }
-         var onclickSquare = function(square, pieces) {
-             var moves = null; //TODO: contact the server here
-
-             if (moves.length === null) return;
-
-             //highligth the selected piece
-             blueSquare(square);
-         }
-
-        </script>
+        <script src="js/chessboard.js"></script>
+        <script src="js/customscripts.js"></script>
     </body>
 </html>
